# stale-odds-hunter

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  experiment.py  program.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: app.yaml  markets.yaml  risk.yaml  strategies.yaml
data/sqlite/: stale_odds_hunter.db-shm  stale_odds_hunter.db-wal
src/: api.py  main.py  settings.py
src/adapters/: geoblock.py  polymarket_live.py  polymarket_public.py  websocket_client.py
src/dashboard/: bot_runner.py  cloud_diagnostics.py  streamlit_app.py
src/domain/: enums.py  events.py  models.py
src/services/: backtest_engine.py  live_execution.py  market_discovery.py  market_state.py  paper_execution.py  portfolio_engine.py  risk_engine.py  signal_engine.py
src/storage/: duckdb_analytics.py  sqlite_store.py
src/strategies/: base.py  cross_market_consistency.py  sports_start_guard.py  stale_odds.py
src/utils/: logging.py  maths.py  time.py
tests/: test_backtest_engine.py  test_paper_execution.py  test_risk_engine.py  test_signal_engine.py
